GNOME Bugzilla – Bug 676637
Crash when account is connecting
Last modified: 2012-05-24 07:38:36 UTC
(empathy-accounts:2169): empathy-CRITICAL **: empathy_contact_dup_from_tp_contact: assertion `TP_IS_CONTACT (tp_contact)' failed Program received signal SIGTRAP, Trace/breakpoint trap. 0x00007ffff2d720f0 in g_logv (log_domain=0x46e882 "empathy", log_level=G_LOG_LEVEL_CRITICAL, format=0x7ffff2df4dc0 "%s: assertion `%s' failed", args1=0x7fffffffc9b8) at gmessages.c:758 758 G_BREAKPOINT (); Missing separate debuginfos, use: debuginfo-install json-c-0.9-2.fc15.x86_64 pulseaudio-libs-1.1-3.fc17.x86_64 pulseaudio-libs-glib2-1.1-3.fc17.x86_64 (gdb) bt
+ Trace 230259
Created attachment 214761 [details] [review] accounts-dialog: don't crash if the account is connecting
+1
Attachment 214761 [details] pushed as dd56cdf - accounts-dialog: don't crash if the account is connecting