accounts-dialog: don't crash if the account is connecting

https://bugzilla.gnome.org/show_bug.cgi?id=676637